zero-schema-macros/tests/ui/fail/19_collision_schema_size.rs
use zero_schema_macros::zero;

#[zero]
struct SchemaSizeCollision {
    SCHEMA_SIZE: u8,
}

fn main() {}
